fix up spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 .App {
   font-family: sans-serif;
   margin-top: 15px;
-}
 
+  .content {
+    padding-top: 15px;
+  }
+}
